--- a/kumpulanSoal/transformasiGeometri/refleksiSoal.html
+++ b/kumpulanSoal/transformasiGeometri/refleksiSoal.html
@@ -119,7 +119,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal1" value="0"/>
                 \(A'(-5, -2) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal1" aria-expanded="false" aria-controls="collapsesoal1" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal1" aria-expanded="false" aria-controls="collapsesoal1" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal1">
@@ -152,7 +152,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal2" value="0" />
                 \((2, 3) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal2" aria-expanded="false" aria-controls="collapsesoal2" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal2" aria-expanded="false" aria-controls="collapsesoal2" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal2">
@@ -184,7 +184,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal3" value="0" />
                 \((-7, 3) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal3" aria-expanded="false" aria-controls="collapsesoal3" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal3" aria-expanded="false" aria-controls="collapsesoal3" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal3">
@@ -216,7 +216,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal4" value="0" >
                 \(3x+3y=17 \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal4" aria-expanded="false" aria-controls="collapsesoal4" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal4" aria-expanded="false" aria-controls="collapsesoal4" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal4">
@@ -260,7 +260,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal5" value="10"/>
                 \(y=4x-11 \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal5" aria-expanded="false" aria-controls="collapsesoal5" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal5" aria-expanded="false" aria-controls="collapsesoal5" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal5">
@@ -304,7 +304,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal6" value="0" />
                 \(x=-2y^2 +3y -5 \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal6" aria-expanded="false" aria-controls="collapsesoal6" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal6" aria-expanded="false" aria-controls="collapsesoal6" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal6">
@@ -346,7 +346,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal7" value="0" />
                 \(x^2 +y^2 -4x+6y=-2\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal7" aria-expanded="false" aria-controls="collapsesoal7" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal7" aria-expanded="false" aria-controls="collapsesoal7" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal7">
@@ -388,7 +388,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal8" value="0" />
                 \(x-y-1=0 \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal8" aria-expanded="false" aria-controls="collapsesoal8" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal8" aria-expanded="false" aria-controls="collapsesoal8" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal8">
@@ -429,7 +429,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal9" value="0" />
                 \(x=-y\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal9" aria-expanded="false" aria-controls="collapsesoal9" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal9" aria-expanded="false" aria-controls="collapsesoal9" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal9">
@@ -461,7 +461,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal10" value="0" />
                 \((-4,2)\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal10" aria-expanded="false" aria-controls="collapsesoal10" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal10" aria-expanded="false" aria-controls="collapsesoal10" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal10">
@@ -492,7 +492,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal11" value="0" />
                 \((1,8)\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal11" aria-expanded="false" aria-controls="collapsesoal11" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal11" aria-expanded="false" aria-controls="collapsesoal11" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal11">
@@ -525,7 +525,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal12" value="0" />
                 \((4,-2)\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal12" aria-expanded="false" aria-controls="collapsesoal12" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal12" aria-expanded="false" aria-controls="collapsesoal12" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal12">
@@ -560,7 +560,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal13" value="0" />
                 \((4,-4)\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal13" aria-expanded="false" aria-controls="collapsesoal13" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal13" aria-expanded="false" aria-controls="collapsesoal13" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal13">
@@ -593,7 +593,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal14" value="0" />
                 \(8\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal14" aria-expanded="false" aria-controls="collapsesoal14" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal14" aria-expanded="false" aria-controls="collapsesoal14" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal14">
@@ -628,7 +628,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal15" value="0"/>
                 \(\text{garis } y=x\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal15" aria-expanded="false" aria-controls="collapsesoal15" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal15" aria-expanded="false" aria-controls="collapsesoal15" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal15">
@@ -662,7 +662,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal16" value="0" />
                 \((7,-6)\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal16" aria-expanded="false" aria-controls="collapsesoal16" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal16" aria-expanded="false" aria-controls="collapsesoal16" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal16">
@@ -694,7 +694,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal17" value="0" />
                 \(5x-3y+15=0\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal17" aria-expanded="false" aria-controls="collapsesoal17" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal17" aria-expanded="false" aria-controls="collapsesoal17" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal17">
@@ -735,7 +735,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal18" value="10"/>
                 \(-x+7y+4=0\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal18" aria-expanded="false" aria-controls="collapsesoal18" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal18" aria-expanded="false" aria-controls="collapsesoal18" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal18">
@@ -780,7 +780,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal19" value="10"/>
                 \(Z''(-1,-2)\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal19" aria-expanded="false" aria-controls="collapsesoal19" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal19" aria-expanded="false" aria-controls="collapsesoal19" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal19">
@@ -816,7 +816,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal20" value="10"/>
                 \((-1,-6)\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal20" aria-expanded="false" aria-controls="collapsesoal20" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal20" aria-expanded="false" aria-controls="collapsesoal20" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal20">
@@ -851,7 +851,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal21" value="0" />
                 \(x+y=1\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal21" aria-expanded="false" aria-controls="collapsesoal21" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal21" aria-expanded="false" aria-controls="collapsesoal21" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal21">
@@ -897,7 +897,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal22" value="0" />
                 \(x=-y^2+3y+3\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal22" aria-expanded="false" aria-controls="collapsesoal22" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal22" aria-expanded="false" aria-controls="collapsesoal22" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal22">
@@ -940,7 +940,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal23" value="0" />
                 \((2,1)\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal23" aria-expanded="false" aria-controls="collapsesoal23" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal23" aria-expanded="false" aria-controls="collapsesoal23" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal23">
@@ -972,7 +972,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal24" value="0" />
                 \(\begin{pmatrix}0&-1\\-1&0 \end{pmatrix}\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal24" aria-expanded="false" aria-controls="collapsesoal24" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal24" aria-expanded="false" aria-controls="collapsesoal24" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal24">
@@ -1010,7 +1010,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal25" value="0" />
                 \(x^2+y^2-6x+4y+16=0\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal25" aria-expanded="false" aria-controls="collapsesoal25" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal25" aria-expanded="false" aria-controls="collapsesoal25" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal25">
