--- a/kumpulanSoal/transformasiGeometri/translasisoal.html
+++ b/kumpulanSoal/transformasiGeometri/translasisoal.html
@@ -118,7 +118,7 @@
                 <input type="radio" name="soal1" value="10"/>
                 \(A'(1, 9) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal1" aria-expanded="false" aria-controls="collapsesoal1" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal1" aria-expanded="false" aria-controls="collapsesoal1" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal1">
@@ -150,7 +150,7 @@
                 <input type="radio" name="soal2" value="0" />
                 \((-5, -20) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal2" aria-expanded="false" aria-controls="collapsesoal2" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal2" aria-expanded="false" aria-controls="collapsesoal2" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal2">
@@ -183,7 +183,7 @@
                 <input type="radio" name="soal3" value="0" />
                 \((-2, -1) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal3" aria-expanded="false" aria-controls="collapsesoal3" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal3" aria-expanded="false" aria-controls="collapsesoal3" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal3">
@@ -217,7 +217,7 @@
                 <input type="radio" name="soal4" value="0">
                 \(D'(6,2) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal4" aria-expanded="false" aria-controls="collapsesoal4" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal4" aria-expanded="false" aria-controls="collapsesoal4" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal4">
@@ -254,7 +254,7 @@
                 <input type="radio" name="soal5" value="0" />
                 \((-3,-6) \) dan \((4,-4) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal5" aria-expanded="false" aria-controls="collapsesoal5" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal5" aria-expanded="false" aria-controls="collapsesoal5" >
                   Alternatif Penyelesaian:
                   </button>
                   <div class="collapse" id="collapsesoal5">
@@ -296,7 +296,7 @@
                 <input type="radio" name="soal6" value="0" />
                 \((-5,-20) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal6" aria-expanded="false" aria-controls="collapsesoal6" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal6" aria-expanded="false" aria-controls="collapsesoal6" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal6">
@@ -327,7 +327,7 @@
                 <input type="radio" name="soal7" value="0" />
                 \((10,9)\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal7" aria-expanded="false" aria-controls="collapsesoal7" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal7" aria-expanded="false" aria-controls="collapsesoal7" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal7">
@@ -359,7 +359,7 @@
                 <input type="radio" name="soal8" value="0" />
                 \((-2,3) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal8" aria-expanded="false" aria-controls="collapsesoal8" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal8" aria-expanded="false" aria-controls="collapsesoal8" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal8">
@@ -389,7 +389,7 @@
                 <input type="radio" name="soal9" value="0" />
                 \(2\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal9" aria-expanded="false" aria-controls="collapsesoal9" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal9" aria-expanded="false" aria-controls="collapsesoal9" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal9">
@@ -423,7 +423,7 @@
                 <input type="radio" name="soal10" value="0" />
                 \(3\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal10" aria-expanded="false" aria-controls="collapsesoal10" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal10" aria-expanded="false" aria-controls="collapsesoal10" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal10">
@@ -460,7 +460,7 @@
                 <input type="radio" name="soal11" value="0" />
                 \(3x-2y+20=0\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal11" aria-expanded="false" aria-controls="collapsesoal11" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal11" aria-expanded="false" aria-controls="collapsesoal11" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal11">
@@ -502,7 +502,7 @@
                 <input type="radio" name="soal12" value="0" />
                 \(x^2 + y^2 -6x +10y +16 =0\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal12" aria-expanded="false" aria-controls="collapsesoal12" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal12" aria-expanded="false" aria-controls="collapsesoal12" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal12">
@@ -546,7 +546,7 @@
                 <input type="radio" name="soal13" value="0" />
                 \(y=-x^2+6x+1 \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal13" aria-expanded="false" aria-controls="collapsesoal13" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal13" aria-expanded="false" aria-controls="collapsesoal13" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal13">
@@ -590,7 +590,7 @@
                 <input type="radio" name="soal14" value="10"/>
                 \((x+3)^2 +(y+6)^2 = 7\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal14" aria-expanded="false" aria-controls="collapsesoal14" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal14" aria-expanded="false" aria-controls="collapsesoal14" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal14">
@@ -632,7 +632,7 @@
                 <input type="radio" name="soal15" value="0" />
                 \(5x+y=41\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal15" aria-expanded="false" aria-controls="collapsesoal15" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal15" aria-expanded="false" aria-controls="collapsesoal15" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal15">
