--- a/kumpulanSoal/transformasiGeometri/dilatasiSoal.html
+++ b/kumpulanSoal/transformasiGeometri/dilatasiSoal.html
@@ -98,21 +98,35 @@
               <hr />
 
               <ol type="1">
-                <li>SOAL 1</li>
+                <li>Hasil dilatasi titik \(A(-1,3)\) dengan faktor skala \(-2\) terhadap titik pusat \((0,0)\) </li>
                 <input type="radio" name="soal1" value="0" />
-                \(A \)
+                \((-6,2) \)
                 <br />
                 <input type="radio" name="soal1" value="0" />
-                \(B \)
+                \((6,-2) \)
                 <br />
                 <input type="radio" name="soal1" value="0"  />
-                \(C \)
+                \((-2,6) \)
+                <br />
+                <input type="radio" name="soal1" value="10" />
+                \((2,-6) \)
                 <br />
                 <input type="radio" name="soal1" value="0" />
-                \(D \)
+                \((2,6) \)
                 <br />
-                <input type="radio" name="soal1" value="10" id="soal1"/>
-                \(E \)
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal1" aria-expanded="false" aria-controls="collapsesoal1">
+                Alternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapsesoal1">
+                  <div class="card card-body overflow-auto">
+                    \(\begin{align}
+                    \begin{pmatrix}x'\\y' \end{pmatrix} &= \begin{pmatrix} k&0\\0&k end{pmatrix}\begin{pmatrix}x\\y \end{pmatrix} \\
+                    
+                    \end{align}\)
+                    <br>
+                    <b class="text-end"> JAWABAN : D</b>
+                  </div>
+                </div>
                 <hr />
                 <!--========================= soal no 2 ===========================================================================-->
                 <li>SOAL 2</li>
@@ -147,6 +161,25 @@
                 <br />
                 <input type="radio" name="soal3" value="0" />
                 \(E \)
+                <br />
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal3" aria-expanded="false" aria-controls="collapsesoal3">
+                Alternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapsesoal3">
+                  <div class="card card-body overflow-auto">
+                    garis x = 0 sama dengan garis sumbu-Y
+                    \(\begin{align}
+                    \begin{pmatrix}x'\\y' \end{pmatrix} &= \begin{pmatrix}k&0\\0&k \end{pmatrix} \begin{pmatrix}x-m\\y-n \end{pmatrix}+ \begin{pmatrix}m\\n \end{pmatrix} \\
+                    &=\begin{pmatrix}-1&0\\0&-1 \end{pmatrix}\begin{pmatrix}-2-5\\3-4 \end{pmatrix}+\begin{pmatrix}5\\4 \end{pmatrix}\\
+                    &=\begin{pmatrix}-1&0\\0&-1 \end{pmatrix} \begin{pmatrix}-7\\-1 \end{pmatrix}+\begin{pmatrix}5\\4 \end{pmatrix} \\
+                    &= \begin{pmatrix}7\\1 \end{pmatrix} + \begin{pmatrix}5\\4 \end{pmatrix} \\
+                    &= \begin{pmatrix}12\\5 \end{pmatrix}
+                    \end{align}\)
+                    <br>
+                    
+                   <b class="text-end"> JAWABAN : E</b>
+                  </div>
+                </div>
                 <hr />
                 <!-- soal no no4 =================================================================================================-->
                 <li>SOAL 4 </li>
