--- a/kumpulanSoal/transformasiGeometri/rotasiSoal.html
+++ b/kumpulanSoal/transformasiGeometri/rotasiSoal.html
@@ -339,7 +339,7 @@
                 <br />
                 <input type="radio" name="soal7" value="0" />
                 \(y=2\sqrt{2}+2\sqrt{2}\)<br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal7" aria-expanded="false" aria-controls="collapsesoal7" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal7" aria-expanded="false" aria-controls="collapsesoal7" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal7">
@@ -413,7 +413,7 @@
                 <input type="radio" name="soal8" value="0" />
                 \((6,13) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal8" aria-expanded="false" aria-controls="collapsesoal8" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal8" aria-expanded="false" aria-controls="collapsesoal8" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal8">
@@ -448,7 +448,7 @@
                 <input type="radio" name="soal9" value="0" />
                 \(\sqrt{3}x+(3\sqrt{3}-1)y+4 = 0\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal9" aria-expanded="false" aria-controls="collapsesoal9" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal9" aria-expanded="false" aria-controls="collapsesoal9" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal9">
@@ -527,7 +527,7 @@
                 <input type="radio" name="soal10" value="0" />
                 \(B''(\sqrt{3}-\frac{1}{2},-\frac{5}{4}\sqrt{3}-1 )\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal10" aria-expanded="false" aria-controls="collapsesoal10" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal10" aria-expanded="false" aria-controls="collapsesoal10" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal10">
