--- a/kumpulanSoal/transformasiGeometri/transgeo2.html
+++ b/kumpulanSoal/transformasiGeometri/transgeo2.html
@@ -114,7 +114,7 @@
                 <input type="radio" name="soal1" value="0" />
                 \((1,-5) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal1" aria-expanded="false" aria-controls="collapsesoal1" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal1" aria-expanded="false" aria-controls="collapsesoal1" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal1">
@@ -152,7 +152,7 @@
                 <input type="radio" name="soal2" value="0" />
                 \((6,14) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal2" aria-expanded="false" aria-controls="collapsesoal2" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal2" aria-expanded="false" aria-controls="collapsesoal2" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal2">
@@ -190,7 +190,7 @@
                 <input type="radio" name="soal3" value="0" />
                 \((-2,1) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collpasesoal3" aria-expanded="false" aria-controls="collpasesoal3" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collpasesoal3" aria-expanded="false" aria-controls="collpasesoal3" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collpasesoal3">
@@ -225,7 +225,7 @@
                 <input type="radio" name="soal4" value="0" >
                 \(0 \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal4" aria-expanded="false" aria-controls="collapsesoal4" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal4" aria-expanded="false" aria-controls="collapsesoal4" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal4">
