--- a/kumpulanSoal/transformasiGeometri/transgeo1.html
+++ b/kumpulanSoal/transformasiGeometri/transgeo1.html
@@ -114,7 +114,7 @@
                 <input type="radio" name="soal1" value="0" />
                 \(5 \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse1">
@@ -148,7 +148,7 @@
                 <input type="radio" name="soal2" value="0" />
                 \(3x-2y+20=0 \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse2">
@@ -184,7 +184,7 @@
                 <input type="radio" name="soal3" value="0" />
                 \(x^2+y^2-6x+10y+16=0 \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse3">
@@ -221,7 +221,7 @@
                 <input type="radio" name="soal4" value="0" ">
                 \(x-y-1=0 \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse4">
@@ -257,7 +257,7 @@
                 <input type="radio" name="soal5" value="0" />
                 \(56\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse5">
@@ -300,7 +300,7 @@
                 <input type="radio" name="soal6" value="0" />
                 \((-3,0) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse6">
@@ -332,7 +332,7 @@
                 <input type="radio" name="soal7" value="10" id="soal7"/>
                 \((2,3) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse7">
@@ -368,7 +368,7 @@
                 <input type="radio" name="soal8" value="0" />
                 \((2,10) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse8">
@@ -401,7 +401,7 @@
                 <input type="radio" name="soal9" value="0" />
                 \(A'(5,4)\), \(B'(2,0)\), dan \(C'(4,-1)\)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapse9" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapse9" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse9">
@@ -434,7 +434,7 @@
                 <input type="radio" name="soal10" value="0" />
                 \((52,39) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="false" aria-controls="collapse10" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="false" aria-controls="collapse10" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse10">
@@ -467,7 +467,7 @@
                 <input type="radio" name="soal11" value="0" />
                 \(3x+11y=5 \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse11" aria-expanded="false" aria-controls="collapse11" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse11" aria-expanded="false" aria-controls="collapse11" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse11">
@@ -502,7 +502,7 @@
                 <br />
                 <input type="radio" name="soal12" value="0" />
                 \(2y+x+3=0 \)<br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse12" aria-expanded="false" aria-controls="collapse12" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse12" aria-expanded="false" aria-controls="collapse12" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse12">
@@ -537,7 +537,7 @@
                 <input type="radio" name="soal13" value="0" />
                 \(x^2 +y^2+8x-2y+13=0 \)
                 <br />
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse13">
@@ -575,7 +575,7 @@
                 <input type="radio" name="soal14" value="0" />
                 \(x=-y^2+y+3 \)
                 <br />
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse14" aria-expanded="false" aria-controls="collapse14" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse14" aria-expanded="false" aria-controls="collapse14" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse14">
@@ -608,7 +608,7 @@
                 <input type="radio" name="soal15" value="0" />
                 \(y=\sin 2x \)
                 <br />
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse15" aria-expanded="false" aria-controls="collapse15" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse15" aria-expanded="false" aria-controls="collapse15" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse15">
