--- a/kumpulanSoal/transformasiGeometri/rotasiSoal.html
+++ b/kumpulanSoal/transformasiGeometri/rotasiSoal.html
@@ -114,7 +114,7 @@
                 <input type="radio" name="soal1" value="0"/>
                 \((3,-5) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal1" aria-expanded="false" aria-controls="collapsesoal1" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal1" aria-expanded="false" aria-controls="collapsesoal1" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal1">
@@ -147,7 +147,7 @@
                 <input type="radio" name="soal2" value="0" />
                 \((8,-3) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal2" aria-expanded="false" aria-controls="collapsesoal2" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal2" aria-expanded="false" aria-controls="collapsesoal2" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal2">
@@ -180,7 +180,7 @@
                 <input type="radio" name="soal3" value="0" />
                 \(3y+15=-15 \)
                 <br />
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal3" aria-expanded="false" aria-controls="collapsesoal3" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal3" aria-expanded="false" aria-controls="collapsesoal3" >
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal3">
@@ -221,7 +221,7 @@
                 <input type="radio" name="soal4" value="0" />
                 \((2,-2) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal4" aria-expanded="false" aria-controls="collapsesoal4" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal4" aria-expanded="false" aria-controls="collapsesoal4">
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal4">
@@ -255,7 +255,7 @@
                 <input type="radio" name="soal5" value="0" />
                 \((2,-2) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal5" aria-expanded="false" aria-controls="collapsesoal5" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal5" aria-expanded="false" aria-controls="collapsesoal5">
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal5">
@@ -287,7 +287,7 @@
                 <input type="radio" name="soal6" value="0" />
                 \(2y+x=-19 \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6" disabled>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapse6">
